Fleshed out static prototype with grid and styling

--- a/src/main/resources/Static/index.html
+++ b/src/main/resources/Static/index.html
@@ -10,63 +10,111 @@
 </head>
 
 <body>
-	<div class="container">
+	<div class="grid-container">
 		<header>
 			<nav>
 				<ul class="navbar">
 					<li>Home</li>
+					<li><span>|</span></li>
 					<li>Browse</li>
+					<li><span>|</span></li>
 					<li>Search</li>
+					<li><span>|</span></li>
 					<li>Invite</li>
+					<li><span>|</span></li>
 					<li>Rank</li>
+					<li><span>|</span></li>
 					<li>Mail</li>
+					<li><span>|</span></li>
 					<li>Blog</li>
+					<li><span>|</span></li>
 					<li>Favorites</li>
+					<li><span>|</span></li>
 					<li>Forum</li>
+					<li><span>|</span></li>
 					<li>Groups</li>
+					<li><span>|</span></li>
 					<li>Events</li>
+					<li><span>|</span></li>
 					<li>Games</li>
+					<li><span>|</span></li>
 					<li>Music</li>
+					<li><span>|</span></li>
 					<li>Classifieds</li>
 				</ul>
 			</nav>
 		</header>
-		<main>
-			<div class="col-left__main">
-				<section class="bio">
-					<h1>James</h1>
-				</section>
-				<section class="contact">
-					<h2>Contacting James</h2>
-				</section>
-				<section class="interests">
-					<h2>James's Interests</h2>
-				</section>
-				<section class="details">
-					<h2>James's Details</h2>
-				</section>
-				<section class="schools">
-					<h2>James's Schools</h2>
-				</section>
-				<section class="companies">
-					<h2>James's Companies</h2>
-				</section>
-			</div>
-			<div class="col-right__main">
-				<section class="blogs">
-					<h2>James's Latest Blog Entry</h2>
-				</section>
-				<section class="blurbs">
-					<h2>James's Blurbs</h2>
-				</section>
-				<section class="friends">
-					<h2>James's Friend Space</h2>
-				</section>
-				<section class="comments">
-					<h2>James's Friends Comments</h2>
-				</section>
-			</div>
-		</main>
+
+		<div class="grid-col-left col">
+			<section id="bio">
+				<h1>James</h1>
+				<div class="content">
+
+				</div>
+			</section>
+			<section id="contact">
+				<h2>Contacting James</h2>
+				<div class="content">
+					<a href=""><img src="images/sendMailIcon.gif" alt="Send Message"></a>
+					<a href=""><img src="images/forwardMailIcon.gif" alt="Forward to Friend"></a>
+					<a href=""><img src="images/addFriendIcon.gif" alt="Add to Friends"></a>
+					<a href=""><img src="images/addFavoritesIcon.gif" alt="Add to Favorites"></a>
+					<a href=""><img src="images/messagefriend.gif" alt="Instant Message"></a>
+					<a href=""><img src="images/blockuser.gif" alt="SBlock User"></a>
+					<a href=""><img src="images/icon_add_to_group.gif" alt="Add to Group"></a>
+					<a href=""><img src="images/icon_rank_user4.gif" alt="Rank User"></a>
+				</div>
+
+
+			</section>
+			<section id="interests">
+				<h2>James's Interests</h2>
+				<div class="content">
+					<div class="content-title">General</div>
+					<div class="content-area">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+						Accusantium, nesciunt iusto! </div>
+					<div class="content-title">Music</div>
+					<div class="content-area">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+						Accusantium, nesciunt iusto! Odio at iure saepe delectus quos iste quae eos facere,
+						vitae enim fugiat, ipsum optio obcaecati quaerat eligendi nesciunt dolores sapiente!
+						Aliquid incidunt, velit facere quidem dicta enim eos?</div>
+					<div class="content-title">Movies</div>
+					<div class="content-area">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+						Accusantium, nesciunt iusto! Odio at iure saepe delectus quos iste quae eos facere,
+						vitae enim fugiat, ipsum optio obcaecati </div>
+					<div class="content-title">Books</div>
+					<div class="content-area">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+						Accusantium, nesciunt iusto! Odio at iure saepe delectus quos iste quae eos facere,
+						vitae enim fugiat, ipsum optio obcaecati quaerat eligendi nesciunt dolores sapiente!
+						Aliquid incidunt, velit facere quidem dicta enim eos?</div>
+				</div>
+			</section>
+			<section id="details">
+				<h2>James's Details</h2>
+			</section>
+			<section id="schools">
+				<h2>James's Schools</h2>
+			</section>
+			<section id="companies">
+				<h2>James's Companies</h2>
+			</section>
+		</div> <!-- GRID-COL-LEFT -->
+
+		<div class="grid-col-right">
+			<section id="blogs">
+				<h2>James's Latest Blog Entry</h2>
+			</section>
+			<section id="blurbs">
+				<h2>James's Blurbs</h2>
+			</section>
+			<section id="friends">
+				<h2>James's Friend Space</h2>
+			</section>
+			<section id="comments">
+				<h2>James's Friends Comments</h2>
+			</section>
+		</div> <!-- GRID-COL-RIGHT -->
+
 	</div>
 </body>
 
