Nearly finished with index.html prototype

--- a/src/main/resources/Static/index.html
+++ b/src/main/resources/Static/index.html
@@ -49,7 +49,17 @@
 			<section id="bio">
 				<h1>James</h1>
 				<div class="content">
+					<div class="bio-col-left">
+						<img src="images/0.jpeg" alt="Selfie"></div>
+					<div class="bio-col-right">
+						<p>"full-stack developer"</p>
+						<br>
+						<br>
+						<p>Columbus,</p>
+						<p>OHIO</p>
+						<p>United States</p>
 
+					</div>
 				</div>
 			</section>
 			<section id="contact">
@@ -91,27 +101,121 @@
 			</section>
 			<section id="details">
 				<h2>James's Details</h2>
+				<div class="content">
+					<div class="content-title">Status:</div>
+					<div class="content-area">Alive</div>
+					<div class="content-title">Here for:</div>
+					<div class="content-area">Browsing dank memes</div>
+					<div class="content-title">Hometown:</div>
+					<div class="content-area">Party City, USA</div>
+					<div class="content-title">Sign:</div>
+					<div class="content-area">Yield</div>
+					<div class="content-title">Education:</div>
+					<div class="content-area">Some</div>
+					<div class="content-title">Occupation:</div>
+					<div class="content-area">Shiftless Layabout</div>
+				</div>
 			</section>
 			<section id="schools">
 				<h2>James's Schools</h2>
+				<div class="content">
+					<div class="content-title">
+						<a href="#">We Can Code It</a>
+						<p>Grad Year: 2020</p>
+						<p>Program: Software Development</p>
+					</div>
+					<div class="content-area">2020</div>
+				</div>
 			</section>
 			<section id="companies">
+				<div class="content">
+
+				</div>
 				<h2>James's Companies</h2>
 			</section>
 		</div> <!-- GRID-COL-LEFT -->
 
 		<div class="grid-col-right">
+			<section id="network">
+				<p>James is in your extended network</p>
+			</section>
 			<section id="blogs">
-				<h2>James's Latest Blog Entry</h2>
+
+				<div class="content">
+					<ul>
+						<li>James's Latest Blog Entry</li>
+						<li>Blogpost 1</li>
+						<li>This is another blog post</li>
+						<li>It's 2003 and I blog every day</li>
+						<li><a href="#">View All Blog Entries</a></li>
+					</ul>
+
+				</div>
 			</section>
 			<section id="blurbs">
 				<h2>James's Blurbs</h2>
+				<div class="content">
+					<h3>About me:</h3>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+						Ducimus, eos? Aliquam provident fugit reprehenderit impedit,
+						consectetur debitis, fuga, nesciunt vero natus
+						quis magnam! Culpa, aperiam.</p>
+					<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magni
+						voluptates maiores maxime animi totam incidunt voluptatibus, ratione autem!</p>
+					<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam sed quaerat
+						voluptatibus corrupti vitae tempore doloribus neque minima officiis mollitia!</p>
+					<h3>Another subheading</h3>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque cum ad aliquam
+						beatae natus accusantium magni officia voluptatum aperiam, nulla officiis! Hic
+						recusandae sunt similique error est laborum?</p>
+				</div>
 			</section>
 			<section id="friends">
 				<h2>James's Friend Space</h2>
+				<div class="content">
+					<div><img src="images/friend1.jpg" alt="Friend1"></div>
+					<div><img src="images/friend2.jpg" alt="Friend2"></div>
+					<div><img src="images/friend3.jpg" alt="Friend3"></div>
+					<div><img src="images/friend4.jpg" alt="Friend4"></div>
+					<div><img src="images/friend5.jpg" alt="Friend5"></div>
+					<div><img src="images/friend6.jpg" alt="Friend6"></div>
+					<div><img src="images/friend7.jpg" alt="Friend7"></div>
+					<div><img src="images/friend8.jpg" alt="Friend8"></div>
+				</div>
 			</section>
 			<section id="comments">
 				<h2>James's Friends Comments</h2>
+				<div id="comments">
+					<div class="comment">
+						<div class="comment-thumb"></div>
+						<div class="comment-text"></div>
+					</div>
+					<div class="comment">
+						<div class="comment-thumb"></div>
+						<div class="comment-text"></div>
+					</div>
+					<div class="comment">
+						<div class="comment-thumb"></div>
+						<div class="comment-text"></div>
+					</div>
+					<div class="comment">
+						<div class="comment-thumb"></div>
+						<div class="comment-text"></div>
+					</div>
+					<div class="comment">
+						<div class="comment-thumb"></div>
+						<div class="comment-text"></div>
+					</div>
+					<div class="comment">
+						<div class="comment-thumb"></div>
+						<div class="comment-text"></div>
+					</div>
+					<div class="comment">
+						<div class="comment-thumb"></div>
+						<div class="comment-text"></div>
+					</div>
+
+				</div>
 			</section>
 		</div> <!-- GRID-COL-RIGHT -->
 
