Created prototype pages for authors, tags, posts, and genres

--- a/src/main/resources/Static/index.html
+++ b/src/main/resources/Static/index.html
@@ -14,33 +14,15 @@
 		<header>
 			<nav>
 				<ul class="navbar">
-					<li>Home</li>
+					<li><a href="index.html">Home</a> </li>
 					<li><span>|</span></li>
-					<li>Browse</li>
+					<li><a href="blogs.html">Blogs</a></li>
 					<li><span>|</span></li>
-					<li>Search</li>
+					<li><a href="authors.html">Authors</a></li>
 					<li><span>|</span></li>
-					<li>Invite</li>
+					<li><a href="tags.html">Tags</a></li>
 					<li><span>|</span></li>
-					<li>Rank</li>
-					<li><span>|</span></li>
-					<li>Mail</li>
-					<li><span>|</span></li>
-					<li>Blog</li>
-					<li><span>|</span></li>
-					<li>Favorites</li>
-					<li><span>|</span></li>
-					<li>Forum</li>
-					<li><span>|</span></li>
-					<li>Groups</li>
-					<li><span>|</span></li>
-					<li>Events</li>
-					<li><span>|</span></li>
-					<li>Games</li>
-					<li><span>|</span></li>
-					<li>Music</li>
-					<li><span>|</span></li>
-					<li>Classifieds</li>
+					<li><a href="genres.html">Genres</a></li>
 				</ul>
 			</nav>
 		</header>
@@ -60,7 +42,7 @@
 						<p>United States</p>
 
 					</div>
-				</div>
+				</div><!-- CONTENT -->
 			</section>
 			<section id="contact">
 				<h2>Contacting James</h2>
@@ -73,7 +55,7 @@
 					<a href=""><img src="images/blockuser.gif" alt="SBlock User"></a>
 					<a href=""><img src="images/icon_add_to_group.gif" alt="Add to Group"></a>
 					<a href=""><img src="images/icon_rank_user4.gif" alt="Rank User"></a>
-				</div>
+				</div><!-- CONTENT -->
 
 
 			</section>
@@ -97,7 +79,7 @@
 						Accusantium, nesciunt iusto! Odio at iure saepe delectus quos iste quae eos facere,
 						vitae enim fugiat, ipsum optio obcaecati quaerat eligendi nesciunt dolores sapiente!
 						Aliquid incidunt, velit facere quidem dicta enim eos?</div>
-				</div>
+				</div><!-- CONTENT -->
 			</section>
 			<section id="details">
 				<h2>James's Details</h2>
@@ -114,7 +96,7 @@
 					<div class="content-area">Some</div>
 					<div class="content-title">Occupation:</div>
 					<div class="content-area">Shiftless Layabout</div>
-				</div>
+				</div><!-- CONTENT -->
 			</section>
 			<section id="schools">
 				<h2>James's Schools</h2>
@@ -125,12 +107,12 @@
 						<p>Program: Software Development</p>
 					</div>
 					<div class="content-area">2020</div>
-				</div>
+				</div><!-- CONTENT -->
 			</section>
 			<section id="companies">
 				<div class="content">
 
-				</div>
+				</div><!-- CONTENT -->
 				<h2>James's Companies</h2>
 			</section>
 		</div> <!-- GRID-COL-LEFT -->
@@ -142,18 +124,18 @@
 			<section id="blogs">
 
 				<div class="content">
-					<ul>
-						<li>James's Latest Blog Entry</li>
-						<li>Blogpost 1</li>
-						<li>This is another blog post</li>
-						<li>It's 2003 and I blog every day</li>
-						<li><a href="#">View All Blog Entries</a></li>
+					<ul class="blog-entries">
+						<li class="blog-link">James's Latest Blog Entry [<a href="#">subscribe to this blog</a>] </li>
+						<li>Blogpost 1 (<a href="#"" class=" blog-link">view more</a>)</li>
+						<li>This is another blog post (<a href="#"" class=" blog-link">view more</a>)</li>
+						<li>It's 2003 and I blog every day (<a href="#"" class=" blog-link">view more</a>)</li>
+						<li>[<a href=" #" class="blog-link">View All Blog Entries</a>]</li>
 					</ul>
 
-				</div>
+				</div><!-- CONTENT -->
 			</section>
 			<section id="blurbs">
-				<h2>James's Blurbs</h2>
+				<h2 class="col-right-sub">James's Blurbs</h2>
 				<div class="content">
 					<h3>About me:</h3>
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -168,10 +150,10 @@
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque cum ad aliquam
 						beatae natus accusantium magni officia voluptatum aperiam, nulla officiis! Hic
 						recusandae sunt similique error est laborum?</p>
-				</div>
+				</div><!-- CONTENT -->
 			</section>
 			<section id="friends">
-				<h2>James's Friend Space</h2>
+				<h2 class="col-right-sub">James's Friend Space</h2>
 				<div class="content">
 					<div><img src="images/friend1.jpg" alt="Friend1"></div>
 					<div><img src="images/friend2.jpg" alt="Friend2"></div>
@@ -181,7 +163,7 @@
 					<div><img src="images/friend6.jpg" alt="Friend6"></div>
 					<div><img src="images/friend7.jpg" alt="Friend7"></div>
 					<div><img src="images/friend8.jpg" alt="Friend8"></div>
-				</div>
+				</div><!-- CONTENT -->
 			</section>
 			<section id="comments">
 				<h2>James's Friends Comments</h2>
@@ -215,9 +197,10 @@
 						<div class="comment-text"></div>
 					</div>
 
-				</div>
+				</div><!-- COMMENTS -->
 			</section>
 		</div> <!-- GRID-COL-RIGHT -->
+
 
 	</div>
 </body>
