spent a few hours with failing jpawiring test unable to create a table. was just missing a getter. added the getter.

--- a/src/main/resources/Static/blogs.html
+++ b/src/main/resources/Static/blogs.html
@@ -29,7 +29,7 @@
 
 		<div class="grid-col-left col">
 			<h1>Blogs</h1>
-			<ul class="blog-list">
+			<ul class="blogPost-list">
 				<li>Bloggity</li>
 				<li>bloogity</li>
 			</ul>
@@ -38,9 +38,9 @@
 		<div class="grid-col-right">
 
 			<section id="blogpost">
-				<h2 class="blog-title">Title</h2>
+				<h2 class="blogPost-title">Title</h2>
 				<div class="content">
-					<p class="blog-body">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+					<p class="blogPost-body">Lorem ipsum dolor sit amet consectetur adipisicing elit.
 						Explicabo fugit repellat expedita blanditiis itaque eveniet voluptatum necessitatibus
 						velit saepe, aliquid ipsa obcaecati ab nisi consequatur unde quia odit autem. A
 						architecto ullam impedit voluptatem eius molestias voluptate sed repellat laudantium
@@ -49,15 +49,15 @@
 						provident. Commodi alias maxime saepe, voluptate mollitia dolores sequi laboriosam hic
 						cupiditate quod animi consequatur eligendi, facere earum.</p>
 				</div><!-- CONTENT -->
-				<div class="blog-footer">
-					<div class="blog-info">
+				<div class="blogPost-footer">
+					<div class="blogPost-info">
 						<ul>
 							<li>Author</li>
 							<li>Date</li>
 							<li>Genre</li>
 						</ul>
 					</div>
-					<div class="blog-tags">
+					<div class="blogPost-tags">
 						<ul>
 							<li>#tag1</li>
 							<li>#tag2</li>
@@ -65,7 +65,7 @@
 							<li>#tag4</li>
 						</ul>
 					</div>
-				</div class="blog-footer">
+				</div class="blogPost-footer">
 			</section>
 		</div> <!-- GRID-COL-RIGHT -->
 
