--- a/src/main/resources/Static/index.html
+++ b/src/main/resources/Static/index.html
@@ -124,12 +124,12 @@
 			<section id="blogs">
 
 				<div class="content">
-					<ul class="blog-entries">
-						<li class="blog-link">James's Latest Blog Entry [<a href="#">subscribe to this blog</a>] </li>
-						<li>Blogpost 1 (<a href="#"" class=" blog-link">view more</a>)</li>
-						<li>This is another blog post (<a href="#"" class=" blog-link">view more</a>)</li>
-						<li>It's 2003 and I blog every day (<a href="#"" class=" blog-link">view more</a>)</li>
-						<li>[<a href=" #" class="blog-link">View All Blog Entries</a>]</li>
+					<ul class="blogPost-entries">
+						<li class="blogPost-link">James's Latest Blog Entry [<a href="#">subscribe to this blogPost</a>] </li>
+						<li>Blogpost 1 (<a href="#"" class=" blogPost-link">view more</a>)</li>
+						<li>This is another blogPost post (<a href="#"" class=" blogPost-link">view more</a>)</li>
+						<li>It's 2003 and I blogPost every day (<a href="#"" class=" blogPost-link">view more</a>)</li>
+						<li>[<a href=" #" class="blogPost-link">View All Blog Entries</a>]</li>
 					</ul>
 
 				</div><!-- CONTENT -->
