--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 
 <head>
 	<meta charset="UTF-8">
@@ -14,15 +14,13 @@
 		<header>
 			<nav>
 				<ul class="navbar">
-					<li><a href="index.html">Home</a> </li>
+					<li><a href="../index.html">Home</a> </li>
 					<li><span>|</span></li>
-					<li><a href="blogs.html">Blogs</a></li>
+					<li><a href="../blogs">Blogs</a></li>
 					<li><span>|</span></li>
-					<li><a href="authors.html">Authors</a></li>
+					<li><a href="../authors">Authors</a></li>
 					<li><span>|</span></li>
-					<li><a href="tags.html">Tags</a></li>
-					<li><span>|</span></li>
-					<li><a href="genres.html">Genres</a></li>
+					<li><a href="../genres">Genres</a></li>
 				</ul>
 			</nav>
 		</header>
@@ -126,10 +124,10 @@
 				<div class="content">
 					<ul class="blogPost-entries">
 						<li class="blogPost-link">James's Latest Blog Entry [<a href="#">subscribe to this blogPost</a>] </li>
-						<li>Blogpost 1 (<a href="#"" class=" blogPost-link">view more</a>)</li>
-						<li>This is another blogPost post (<a href="#"" class=" blogPost-link">view more</a>)</li>
-						<li>It's 2003 and I blogPost every day (<a href="#"" class=" blogPost-link">view more</a>)</li>
-						<li>[<a href=" #" class="blogPost-link">View All Blog Entries</a>]</li>
+						<li>Blogpost 1 (<a href="#" class=" blogPost-link">view more</a>)</li>
+						<li>This is another blogPost post (<a href="#" class=" blogPost-link">view more</a>)</li>
+						<li>It's 2003 and I blogPost every day (<a href="#" class=" blogPost-link">view more</a>)</li>
+						<li>[<a href="#" class="blogPost-link">View All Blog Entries</a>]</li>
 					</ul>
 
 				</div><!-- CONTENT -->
