Templating finished for all pages, still need to get adding blog with dropdown for authors and genres to work

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -125,8 +125,8 @@
 					<ul class="blogPost-entries">
 						<li class="blogPost-link">James's Latest Blog Entry [<a href="#">subscribe to this blogPost</a>] </li>
 						<li>Blogpost 1 (<a href="#" class=" blogPost-link">view more</a>)</li>
-						<li>This is another blogPost post (<a href="#" class=" blogPost-link">view more</a>)</li>
-						<li>It's 2003 and I blogPost every day (<a href="#" class=" blogPost-link">view more</a>)</li>
+						<li>This is another blog post (<a href="#" class=" blogPost-link">view more</a>)</li>
+						<li>It's 2005 and I blog every day (<a href="#" class=" blogPost-link">view more</a>)</li>
 						<li>[<a href="#" class="blogPost-link">View All Blog Entries</a>]</li>
 					</ul>
 
