Fixed problem page presentation

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -24,8 +24,7 @@
 				</ul>
 			</nav>
 		</header>
-
-		<div class="grid-col-left col">
+		<div class="grid-col-left">
 			<section id="bio">
 				<h1>James</h1>
 				<div class="content">
@@ -123,7 +122,7 @@
 
 				<div class="content">
 					<ul class="blogPost-entries">
-						<li class="blogPost-link">James's Latest Blog Entry [<a href="#">subscribe to this blogPost</a>] </li>
+						<li class="blogPost-link">James's Latest Blog Entry [<a href="#">subscribe to this blog</a>] </li>
 						<li>Blogpost 1 (<a href="#" class=" blogPost-link">view more</a>)</li>
 						<li>This is another blog post (<a href="#" class=" blogPost-link">view more</a>)</li>
 						<li>It's 2005 and I blog every day (<a href="#" class=" blogPost-link">view more</a>)</li>
@@ -198,6 +197,7 @@
 				</div><!-- COMMENTS -->
 			</section>
 		</div> <!-- GRID-COL-RIGHT -->
+
 
 
 	</div>
